[tool.poetry]
name = "fetchmesh"
version = "0.3.1"
description = ""
authors = ["Maxime Mouchet <max@maxmouchet.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
appdirs = "^1.4.3"
cached-property = "^1.5.1"
click = "^7.0"
mtoolbox = {extras = ["click"], git = "https://github.com/maxmouchet/mtoolbox.git", tag = "v0.1.9"}
pandas = "^1.0.1"
psutil = "^5.7.0"
pytz = "^2021.1"
py-radix = "^0.10.0"
requests = "^2.22.0"
rich = "^10.5"
tenacity = "^8.0.1"
tqdm = "^4.46.0"
zstandard = "^0.16.0"

[tool.poetry.dev-dependencies]
hypothesis = "^6.14.1"
pre-commit = "^2.7"
pylint = "^2.6.0"
pytest = "^6.0"
pytest-cov = "^2.8"
sphinx = "^4.1"
sphinx-click = "^3.0"

[tool.poetry.scripts]
fetchmesh = 'fetchmesh.commands:main'

[tool.pytest.ini_options]
addopts = "--cov=fetchmesh --cov-report=xml"

[tool.pylint.messages_control]
disable = """
bad-continuation,
invalid-name,
missing-class-docstring,
missing-function-docstring,
missing-module-docstring,
line-too-long,
no-self-use,
too-few-public-methods
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
