[tool.poetry]
name = "fetchmesh"
version = "0.3.3"
description = "A Python library for working with the RIPE Atlas anchoring mesh."
authors = ["Maxime Mouchet <max@maxmouchet.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SmartMonitoringSchemes/fetchmesh"

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "^1.4.3"
cached-property = "^1.5.1"
click = "^8.0"
mbox = {extras = ["click"], version = "^0.1.10"}
pandas = "^1.4.2"
psutil = "^5.7.0"
pytz = "^2022.1"
py-radix = "^0.10.0"
requests = "^2.22.0"
rich = "^12.0"
tenacity = "^8.0.1"
tqdm = "^4.46.0"
zstandard = "^0.17.0"

[tool.poetry.dev-dependencies]
hypothesis = "^6.46.1"
pre-commit = "^2.7"
pylint = "^2.13.8"
pytest = "^7.1.2"
pytest-cov = "^3.0"
sphinx = "^4.1"
sphinx-click = "^4.0"

[tool.poetry.scripts]
fetchmesh = 'fetchmesh.commands:main'

[tool.pytest.ini_options]
addopts = "--cov=fetchmesh --cov-report=xml"

[tool.pylint.messages_control]
disable = """
bad-continuation,
invalid-name,
missing-class-docstring,
missing-function-docstring,
missing-module-docstring,
line-too-long,
no-self-use,
too-few-public-methods
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
