[tool.poetry]
name = "fetchmesh"
version = "0.3.3"
description = "A Python library for working with the RIPE Atlas anchoring mesh."
authors = ["Maxime Mouchet <max@maxmouchet.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SmartMonitoringSchemes/fetchmesh"

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "^1.4.4"
cached-property = "^1.5.2"
click = "^8.1.3"
mbox = {extras = ["click"], version = "^0.1.11"}
pandas = "^2.0.2"
psutil = "^5.9.5"
pytz = "^2023.3"
py-radix = "^0.10.0"
requests = "^2.31.0"
rich = "^13.4.1"
tenacity = "^8.2.2"
tqdm = "^4.65.0"
zstandard = "^0.21.0"

[tool.poetry.dev-dependencies]
hypothesis = "^6.76.0"
pre-commit = "^3.3.2"
pylint = "^2.17.4"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
sphinx = "^7.0.1"
sphinx-click = "^4.4.0"

[tool.poetry.scripts]
fetchmesh = 'fetchmesh.commands:main'

[tool.pytest.ini_options]
addopts = "--cov=fetchmesh --cov-report=xml"

[tool.pylint.messages_control]
disable = """
bad-continuation,
invalid-name,
missing-class-docstring,
missing-function-docstring,
missing-module-docstring,
line-too-long,
no-self-use,
too-few-public-methods
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
